Write about motor parameters

--- a/report/furuta_bib.bib
+++ b/report/furuta_bib.bib
@@ -5,3 +5,10 @@ year = {},
 howpublished = "\url{https://web.eecs.umich.edu/~jfr/embeddedctrls/files/Lecture6.pdf}",
 }
 
+@Misc{pololu_motor_specs,
+author = {Pololu},
+title = {150:1 Metal Gearmotor 37Dx73L mm 12V with 64 CPR Encoder (Helical Pinion)},
+year = {},
+howpublished = "\url{https://www.pololu.com/product/2828}",
+}
+
