--- a/report/furuta_report.tex
+++ b/report/furuta_report.tex
@@ -9,7 +9,7 @@
 
 \graphicspath{ {./images/} }
 
-\title{Furuta Pendulum Control Report}
+\title{Furuta Pendulum Control Project Report}
 
 \author{Samvrit Srinivas}
 
@@ -23,32 +23,8 @@
 
 The input for the furuta pendulum is a torque applied by the motor at the base of the setup. The high-level controller computes the amount of torque to be applied by the motor, and the low-level controller runs a PI control on the torque reference. We use a DC brushed motor for this purpose, and hence the motor controller is designed to be a current controller, as the torque is directly proportional to the winding current. The winding current is controlled by applying a pulse-width-modulated voltage at the motor terminals. In the following sections, we will look into the mathematical model and the control design of the current/torque controller.
 
-\section{Mathematical Model}	\label{sec:math_model}
-
-Since the winding current is controlled by applying a certain voltage at the motor terminals, it is beneficial to look at the transfer function $\frac{I(s)}{V(s)}$. Following represents the current-voltage dynamics of a DC motor \cite{motor_control_umich_lecture}:\\
-
-\includegraphics{dc_motor_transfer_fn}
-
-The combined transfer function is as follows:
-
-\begin{align}
-\frac{I\left(s\right)}{V\left(s\right)} &= \frac{sJ + b}{(sL + R)\cdot(sJ + b) + K_t \cdot K_v} \label{eq:motor_plant_transfer_fn} \\
-\nonumber \\
-\text{where,} \nonumber \\
-I(s) &= \text{winding current} \nonumber \\
-V(s) &= \text{terminal voltage} \nonumber \\
-K_t &= \text{torque constant} \nonumber \\
-K_v &= \text{back emf constant} \nonumber \\
-J &= \text{rotor inertia} \nonumber\\
-b &= \text{rotor friction-damping} \nonumber \\
-L &= \text{winding inductance} \nonumber \\
-R &= \text{winding resistance} \nonumber \\
-V_b &= \text{back emf} \nonumber \\
-\omega &= \text{rotor angular velocity} \nonumber \\
-\tau &= \text{torque} \nonumber
-\end{align}
-
-Equation \ref{eq:motor_plant_transfer_fn} represents the plant dynamics for the controller that we wish to design. By simulating the high level controller with slightly different initial conditions, we were able to get an idea of the torque and speed requirements of the DC motor. A motor with a stall-torque rating of at least 4 Nm and a speed rating of at least 60 RPM was deemed necessary. A motor from Pololu was selected with the nameplate specifications shown in Table \ref{table:pololu_specs} \cite{pololu_motor_specs}.
+\section{Motor Selection and Parameter Derivation}	\label{sec:motor_selection}
+By simulating the high level controller with slightly different initial conditions, we were able to get an idea of the torque and speed requirements of the DC motor. A motor with a stall-torque rating of at least 4 Nm and a speed rating of at least 60 RPM was deemed necessary. A motor from Pololu was selected with the nameplate specifications shown in Table \ref{table:pololu_specs} \cite{pololu_motor_specs}.
 
 
 \begin{table}
@@ -78,27 +54,91 @@ From the nameplate specifications and from CAD drawings provided by the manufact
 
 \begin{table}
 \begin{center}
-\begin{tabular}{|c|c|c|c|}
+\begin{tabular}{|c|c|c|}
 \hline
-\textbf{Parameter} & \textbf{Value} & \textbf{Units} & \textbf{Derivation} \\
+\textbf{Parameter} & \textbf{Value} & \textbf{Units} \\
 \hline \hline
-$K_t$ & $0.968$ & $Nm/A$ & $\frac{\text{stall-torque}}{\text{stall-current}}$ \\
+$K_t$ & $0.968$ & $Nm/A$ \\
 \hline
-$K_v$ & $1.7103$ & $V/rad/s$ & $\frac{\text{nameplate voltage}}{\text{nameplate speed}}$ \\
+$K_v$ & $1.7103$ & $V/rad/s$ \\
 \hline
-$L$ & $2.3e-3$ & $H$ & Provided by manufacturer \\
+$L$ & $2.3e-3$ & $H$ \\
 \hline
-$R$ & $2.18$ & $\Omega$ & $\frac{\text{nameplate voltage}}{\text{stall current}}$ \\
+$R$ & $2.18$ & $\Omega$ \\
 \hline
-$J$ & $12e-9$ & $kgm^2$ & CAD drawing \\
+$J$ & $12e-9$ & $kgm^2$ \\
 \hline
-$b$ & $0.0151$ & $Nm/rad/s$ & $\frac{\text{no-load-current} \cdot K_t}{\text{no-load-speed}}$ \\
+$b$ & $0.0151$ & $Nm/rad/s$ \\
 \hline
 \end{tabular}
 \caption{Motor parameters} \label{table:pololu_motor_params}
 \end{center}
 \end{table}
 
+\subsection{Parameter Derivations}
+
+\subsubsection{Torque Constant}
+\begin{equation}
+K_t = \frac{\text{stall-torque}}{\text{stall-current}}
+\end{equation}
+
+\subsubsection{Back-EMF Constant}
+\begin{equation}
+K_v = \frac{\text{nameplate voltage}}{\text{nameplate speed}}
+\end{equation}
+
+\subsubsection{Winding Inductance and Resistance}
+\begin{equation}
+R = \frac{\text{nameplate voltage}}{\text{stall current}}
+\end{equation}
+The inductance was provided by the manufacturer. It is also possible to measure the inductance using an LCR meter.
+
+\subsubsection{Rotor Inertia}
+From the CAD model, the dimensions (volume and length) of the rotor were obtained. Assuming that the rotor is made of stainless steel, and using the density for stainless steel as $\rho = 7,500 kg/m^3$, the mass was determined. Using mass and length, the rotor inertia was estimated using
+\begin{equation}
+J = \frac{1}{12} \cdot m \cdot l^2
+\end{equation}
+
+\subsubsection{Coefficient of Viscous Friction}
+\begin{equation}
+b = \frac{\text{no-load-current} \cdot K_t}{\text{no-load-speed}}
+\end{equation}
+
+
+
+
+\section{Mathematical Model of DC Motor}	\label{sec:math_model}
+
+Since the winding current is controlled by applying a certain voltage at the motor terminals, it is beneficial to look at the transfer function $\frac{I(s)}{V(s)}$. Following represents the current-voltage dynamics of a DC motor \cite{motor_control_umich_lecture}:\\
+
+\includegraphics{dc_motor_transfer_fn}
+
+The combined transfer function is as follows:
+
+\begin{align}
+\frac{I\left(s\right)}{V\left(s\right)} &= \frac{sJ + b}{(sL + R)\cdot(sJ + b) + K_t \cdot K_v} \label{eq:motor_plant_transfer_fn} \\
+\nonumber \\
+\text{where,} \nonumber \\
+I(s) &= \text{winding current} \nonumber \\
+V(s) &= \text{terminal voltage} \nonumber \\
+K_t &= \text{torque constant} \nonumber \\
+K_v &= \text{back emf constant} \nonumber \\
+J &= \text{rotor inertia} \nonumber\\
+b &= \text{rotor friction-damping} \nonumber \\
+L &= \text{winding inductance} \nonumber \\
+R &= \text{winding resistance} \nonumber \\
+V_b &= \text{back emf} \nonumber \\
+\omega &= \text{rotor angular velocity} \nonumber \\
+\tau &= \text{torque} \nonumber
+\end{align}
+
+Equation \ref{eq:motor_plant_transfer_fn} represents the plant dynamics for the controller that we wish to design.
+
+\section{Motor Controller Design and Analysis}
+
+\begin{center}
+  \makebox[\textwidth]{\includegraphics[width=\linewidth]{motor_control_diagram}}
+\end{center}
 
 \bibliographystyle{plain} 
 \bibliography{furuta_bib}
