Add plots for noise sensitivity

--- a/report/furuta_bib.bib
+++ b/report/furuta_bib.bib
@@ -12,3 +12,11 @@ year = {},
 howpublished = "\url{https://www.pololu.com/product/2828}",
 }
 
+
+@Misc{gang_of_four,
+author = {Karl Johan Åström},
+title = {Feedback Fundamentals},
+year = {},
+howpublished = "\url{https://www.control.lth.se/fileadmin/control/staff/KJ/FeedbackFundamentals.pdf}",
+}
+
